--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       color-scheme: dark;
       --accent:#00ff99;
       --bgBright:#050607;
-      --bgCovered:#0b2a22;
+      --bgCovered:#0f7a33;
       --card: rgba(20,20,20,0.65);
       --border: rgba(255,255,255,0.15);
     }
@@ -242,7 +242,7 @@
             </div>
             <div>
               <div class="small">Covered BG</div>
-              <input id="bgCoveredPicker" type="color" value="#0b2a22" />
+              <input id="bgCoveredPicker" type="color" value="#0f7a33" />
             </div>
           </div>
 
